# Content-Remixer-RAG-App

./: =3.43.2  README.md  evaluation.ipynb  llama3.1_sft_unsloth (1) (1).ipynb  llama3.1_sft_unsloth.ipynb  pyproject.toml
ddd/: settings.py
ddd/application/: utils.py
ddd/application/crawlers/: dispatcher.py
ddd/application/nn/: base.py  embeddings.py
ddd/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatcher.py  embedding_data_handlers.py
ddd/application/preprocessing/operations/: chunking.py  cleaning.py
ddd/application/rag/: base.py  prompt_templates.py  query_expansion.py  reranker.py  retriever.py  self_query.py
ddd/domain/: chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  inference.py  queries.py  types.py
ddd/domain/base/: nosql.py  vector.py
ddd/infrastructure/aws/deploy/huggingface/: config.py  run.py  sagemaker_huggingface.py
ddd/infrastructure/db/: mongo.py  qdrant.py
ddd/model/: utils.py
ddd/model/evaluation/: evaluation.py
ddd/model/finetuning/: finetune.py
ddd/model/inference/: inference.py  run.py
pipelines/: clean.py  digital_data_etl.py  feature_engineering.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: query_data_warehouse.py
